<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>

    <group android:menuCategory="container">
        <item android:id="@+id/deleteAll"
            android:icon="@drawable/ic_deleteall"
            android:title="@string/delete_all"
            app:showAsAction="collapseActionView|never"/>
        <item android:id="@+id/menu2"
            android:title="@string/settings"/>
        <item android:id="@+id/menu1"
            android:title="@string/about"/>
    </group>
</menu>